[package]
name = "rust-ethereum-parser"
version = "0.1.0"
edition = "2024"
author = "Ian Szejer"

[dependencies]
clap = {version="3.1.9", features = ["derive"]}
ethers = { git = "https://github.com/gakonst/ethers-rs", rev="6b6c5115838008565d774d784262e61e01129ebb", default-features = false, features = ["legacy"] }
ethers-solc = { version = "2.0", features = ["full"] }
ethers-providers = { git = "https://github.com/gakonst/ethers-rs", rev="6b6c5115838008565d774d784262e61e01129ebb", features = ["ws"] }
eyre = "*"
hex = "*"
tokio = { version = "1.17.0", features = ["full"] }
tracing = "0.1.34"
tracing-subscriber = "0.3.11"

[[bin]]
name = "transact"
path="src/simple_transactions.rs"

[[bin]]
name = "real_transact"
path="src/real_transactions.rs"

[[bin]]
name = "deploy"
path="src/contract_deploy.rs"